# sample-databricks-python

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml
.dbx/: project.json
.github/workflows/: cd.yml  ci_int_tests.yml  ci_lint_unit_tests.yml
conf/: deployment.yml
conf/tasks/: jinja-vars.yml
python_helper/: autoloader.py  common.py  import_dlt.py
python_helper/pipelines/: ny_taxi.py  pipeline.py
python_helper/transformations/: ny_taxi.py
tests/integration/notebooks/: int_tests_cleanup.py
tests/integration/notebooks/ny_taxi/: ny_taxi_00_generate_test_data.py  ny_taxi_01_test.py
tests/shared_test_instruments/: ny_taxi_data.py  utils.py
tests/unit/: autoloader_test.py  common_test.py  conftest.py  import_dlt_test.py  pipeline_ny_taxi_test.py  transformations_ny_taxi_test.py
workflows/: NY_Taxi_DLT.py
