[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_helper"
version = "0.0.1"
description = "This is an educational helper Python library to be used inside the pipelines of a typical DLT-based Databricks project"
authors = [{name = "Mikhail Setkin", email = "msetkin+data@gmail.com"}]
requires-python = "~=3.11.0"
dependencies = [
    "databricks-test==0.0.4",
    "pyyaml==6.0.0",
    "types-pyyaml==6.0.12.*",
    "wheel==0.45.1", 
]


[project.optional-dependencies]
local_dev = [
    "boto3==1.34.39",
    "botocore==1.34.39",
    "delta-spark==3.2.0",
    "pathlib==1.0.1",
    "pyspark==3.5.0",
]
linting = [
    "black==24.8.0",
    "ruff==0.11.6",
    "isort==6.0.1",
    "mypy==1.15.0",
]
testing = [
    "chispa==0.11.1",
    "mock==5.2.0",
    "pydantic==1.10.6",
    "pytest>=7.3.1",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.0",
    "types-mock==5.2.0.*",
]
deploy = [
    "dbx==0.8.18",
    "tenacity==8.3.0",
]
security = [
    "bandit==1.8.3",
]

[tool.setuptools.packages.find]
include = ["python_helper", "python_helper.*"]
exclude = ["tests", "tests.*", "workflows"]

[tool.setuptools.exclude-package-data]
"workflows" = ["workflows/*"]

[tool.distutils.bdist_wheel]
universal = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
color = true
exclude = 'tests/integration/notebooks/*'

[tool.ruff]
line-length = 120
lint.select = ["E", "F"]
exclude = ["tests/integration/notebooks/"]

[tool.mypy]
ignore_missing_imports = true
pretty = true
exclude = ["tests/integration/notebooks/"]

[[tool.mypy.overrides]]
module = "python_helper.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-s -p no:warnings --cov=python_helper"
log_cli = true
log_cli_level = "INFO"
log_level = "INFO"

[tool.coverage.run]
relative_files = true
source = ["python_helper"]
branch = true
